# ssm_gazebo

./: .gitignore  README.md
src/ex_mm40b3_description/: CMakeLists.txt  ex_mm40b3.urdf
src/ex_mm40b3_description/launch/: controller.launch  sim.launch  spawn_launcher.launch
src/ex_mm40b3_description/meshes/: FinHolder_2.stl  FinHolder_3.stl  Fin_2.stl  Fin_3.stl  Holder_2.stl  Holder_3.stl  Wing1_1.stl  Wing1_2.stl  Wing1_3.stl  Wing1_4.stl
src/ex_mm40b3_description/urdf/: ex_mm40b3.gazebo  ex_mm40b3.xacro  plugins.gazebo
src/exocet_20deg_launcher/: 20deg_launcher.urdf  CMakeLists.txt  model.config  package.xml
src/exocet_20deg_launcher/launch/: display.launch  gazebo.launch  ignition.launch
src/exocet_20deg_launcher/meshes/: base_link.stl
src/exocet_20deg_launcher/urdf/: 20deg_launcher.gazebo  20deg_launcher.xacro  materials.xacro
src/exocet_launcher_half_description/: CMakeLists.txt  exocet_launcher_half.urdf  package.xml
src/exocet_launcher_half_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  ignition.launch
src/exocet_launcher_half_description/meshes/: CanisterHolder_2.stl  Canister_1.stl  Cup_1.stl  Cup_3.stl
src/exocet_launcher_half_description/urdf/: exocet_launcher_half.gazebo  exocet_launcher_half.trans  exocet_launcher_half.xacro  materials.xacro
src/exocet_mm40b3_description/: exocet_mm40b3.urdf
src/exocet_mm40b3_description/launch/: controller.launch  controller.yaml  ignition.launch  sim.launch
src/exocet_mm40b3_description/meshes/: Booster_1.stl  FinHolder_1.stl  FinHolder_2.stl  FinHolder_3.stl  FinHolder_4.stl  Fin_1.stl  Fin_2.stl  Fin_3.stl  Fin_4.stl  Holder_1.stl  Holder_2.stl  Holder_3.stl  Holder_4.stl  Wing1_1.stl  Wing1_2.stl  Wing1_3.stl  Wing1_4.stl  base_link.stl
src/exocet_mm40b3_description/urdf/: exocet_mm40b3.gazebo  exocet_mm40b3.trans  materials.xacro  (+2 more)
src/launcher20deg_description/: CMakeLists.txt  launcher20deg.urdf  package.xml
src/launcher20deg_half_description/: CMakeLists.txt  model.config  package.xml
src/launcher_basic_description/: CMakeLists.txt
src/missile_control_plugin/: CMakeLists.txt  package.xml
src/ssm_matlab/: Copy_of_joint_test.slx  LaunchFromCanister.slx  LaunchMissile.slx  OutputFile1.mat  PlotTrajectory.m  PropulsionSegmentation.mat  PropulsionSegmentation.slx  Skimming.mat  acceleration.slx  aero_diag.asv  aero_diag.m  airframe_init.asv  airframe_init.m  airframe_plot.m  foldwings.m  input_datcom.m  joint_test.slx  mach20.m  mass.m  missile_core.slx  ssm_airframe.slx  ssm_airframe_boost_test.slx  ssm_airframe_thrustvectored_test.slx  ssm_airframe_thrustvectored_test.slx.original  sync_gazebo.slx  table_aero_coeff_body_only.m  table_aero_coeff_fullcomponent.m  table_aero_constatn.m  table_aero_constatn_body_only.m  test.slx  test_2dairframe.slx  test_2dairframe.slx.autosave  test_calculation_liftdrag_normalaxial.m  test_thrust_on_world_frame.m  thrust_vectoring_change_frame.m  vel.slx  vel_ctrl.slx
src/ssm_plugin/: CMakeLists.txt  generate_simulink_msgs.m  package.xml  save_command.m
src/ssm_plugin/msgs/: Force.proto  MultiplevectorVisual.proto  SphericalVector.proto  VectorVisual.proto  double.proto  dynamic_state.proto
src/ssm_plugin/src/: aerodynamic.cc  aerodynamic.hh  aerodynamic_private.hh  detachable_joint.cc  detachable_joint.hh  force_visual.cc  force_visual.hh  initial_position.cc  initial_position.hh  multivector_visual.cc  multivectors_visual.hh  pose_publisher.cc  pose_publisher.hh  simple_thruster.cc  simple_thruster.hh  thrust_vectoring.cc  thrust_vectoring.hh
src/ssm_worlds/: CMakeLists.txt  big_world.sdf  big_world.world  komodo_island.world  package.xml
worlds/: gazebo.launch  my_worlds.sdf
(+312 files in other folders)
